--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
@@ -28,6 +29,7 @@
     "@types/express": "^5.0.2",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
